Fix wizard z-index

--- a/css/theme.css
+++ b/css/theme.css
@@ -15016,7 +15016,7 @@ input.form-reservation-error {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1040;
+  z-index: 1060;
   width: 100%;
   height: 100%;
   padding-top: 1rem;
